--- a/META.yml
+++ b/META.yml
@@ -38,6 +38,7 @@ requires:
   constant: '0'
   perl: '5.008'
   strict: '0'
+  subs: '0'
   utf8: '0'
   warnings: '0'
 resources:
@@ -114,6 +115,7 @@ x_BuiltWith:
     Try::Tiny: '0.22'
     constant: '1.31'
     strict: '1.08'
+    subs: '1.02'
     utf8: '1.14'
     warnings: '1.24'
   perl:
