--- a/META.yml
+++ b/META.yml
@@ -18,10 +18,10 @@ name: Dist-Zilla-Util-Test-KENTNL
 provides:
   Dist::Zilla::Util::Test::KENTNL:
     file: lib/Dist/Zilla/Util/Test/KENTNL.pm
-    version: '1.001000'
+    version: '1.001001'
   Dist::Zilla::Util::Test::KENTNL::dztest:
     file: lib/Dist/Zilla/Util/Test/KENTNL/dztest.pm
-    version: '1.001000'
+    version: '1.001001'
 recommends:
   Test::More: '1.001003'
 requires:
@@ -35,6 +35,7 @@ requires:
   Test::Fatal: '0'
   Test::More: '0.89'
   Try::Tiny: '0'
+  constant: '0'
   perl: '5.008'
   strict: '0'
   utf8: '0'
@@ -43,7 +44,7 @@ resources:
   bugtracker: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL/issues
   homepage: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL
   repository: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL.git
-version: '1.001000'
+version: '1.001001'
 x_BuiltWith:
   modules:
     CPAN::Meta: '2.142060'
@@ -111,6 +112,7 @@ x_BuiltWith:
     Test::Pod: '1.48'
     Test::Pod::Coverage: '1.10'
     Try::Tiny: '0.22'
+    constant: '1.31'
     strict: '1.08'
     utf8: '1.14'
     warnings: '1.24'
@@ -461,7 +463,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: ~
           signed: '0'
-          tag: 1.001000-source
+          tag: 1.001001-source
           tag_format: '%v-source'
           tag_message: v%v
           time_zone: local
@@ -515,7 +517,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: releases
           signed: '0'
-          tag: '1.001000'
+          tag: '1.001001'
           tag_format: '%v'
           tag_message: v%v
           time_zone: local
