--- a/META.yml
+++ b/META.yml
@@ -18,10 +18,10 @@ name: Dist-Zilla-Util-Test-KENTNL
 provides:
   Dist::Zilla::Util::Test::KENTNL:
     file: lib/Dist/Zilla/Util/Test/KENTNL.pm
-    version: '1.001001'
+    version: '1.001002'
   Dist::Zilla::Util::Test::KENTNL::dztest:
     file: lib/Dist/Zilla/Util/Test/KENTNL/dztest.pm
-    version: '1.001001'
+    version: '1.001002'
 recommends:
   Test::More: '1.001003'
 requires:
@@ -44,7 +44,7 @@ resources:
   bugtracker: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL/issues
   homepage: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL
   repository: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL.git
-version: '1.001001'
+version: '1.001002'
 x_BuiltWith:
   modules:
     CPAN::Meta: '2.142060'
@@ -95,10 +95,10 @@ x_BuiltWith:
     Dist::Zilla::Plugin::TestRelease: '5.020'
     Dist::Zilla::Plugin::Twitter: '0.025'
     Dist::Zilla::Plugin::UploadToCPAN: '5.020'
-    Dist::Zilla::PluginBundle::Author::KENTNL: '2.019000'
+    Dist::Zilla::PluginBundle::Author::KENTNL: '2.020000'
     Dist::Zilla::Tester: '5.020'
     ExtUtils::MakeMaker: '6.98'
-    File::Spec: '3.48'
+    File::Spec: '3.49'
     Moose: '2.1211'
     Path::Tiny: '0.056'
     Pod::Coverage::TrustPod: '0.100003'
@@ -115,23 +115,25 @@ x_BuiltWith:
     constant: '1.31'
     strict: '1.08'
     utf8: '1.14'
-    warnings: '1.24'
+    warnings: '1.26'
   perl:
-    original: v5.21.1
+    original: v5.21.3
     qv: 1
     version:
       - 5
       - 21
-      - 1
+      - 3
   perl-config:
     gccversion: 4.8.3
+    git_commit_id: 640eedb9ffcac7a9c2793689044e84bfd9af3045
+    git_describe: v5.21.2-215-g640eedb
     myarchname: x86_64-linux
     osname: linux
   platform: linux
-  uname: 'Linux 3.15.5-aufs x86_64 GenuineIntel GNU/Linux'
+  uname: 'Linux 3.16.1-aufs x86_64 GenuineIntel GNU/Linux'
 x_Dist_Zilla:
   perl:
-    version: '5.021001'
+    version: '5.021003'
   plugins:
     -
       class: Dist::Zilla::Plugin::MetaConfig
@@ -463,7 +465,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: ~
           signed: '0'
-          tag: 1.001001-source
+          tag: 1.001002-source
           tag_format: '%v-source'
           tag_message: v%v
           time_zone: local
@@ -517,7 +519,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: releases
           signed: '0'
-          tag: '1.001001'
+          tag: '1.001002'
           tag_format: '%v'
           tag_message: v%v
           time_zone: local
