--- a/META.yml
+++ b/META.yml
@@ -29,6 +29,8 @@ requires:
   Carp: '0'
   Data::DPath: '0'
   Dist::Zilla::Tester: '0'
+  Dist::Zilla::Util: '0'
+  Module::Runtime: '0'
   Moose: '0'
   Path::Tiny: '0'
   Sub::Exporter: '0'
@@ -74,7 +76,7 @@ x_BuiltWith:
     Dist::Zilla::Plugin::MetaConfig: '5.020'
     Dist::Zilla::Plugin::MetaData::BuiltWith: '1.002000'
     Dist::Zilla::Plugin::MetaJSON: '5.020'
-    Dist::Zilla::Plugin::MetaProvides::Package: '2.000004'
+    Dist::Zilla::Plugin::MetaProvides::Package: '2.001000'
     Dist::Zilla::Plugin::MetaTests: '5.020'
     Dist::Zilla::Plugin::MetaYAML: '5.020'
     Dist::Zilla::Plugin::MinimumPerl: '1.003'
@@ -89,7 +91,7 @@ x_BuiltWith:
     Dist::Zilla::Plugin::RunExtraTests: '0.022'
     Dist::Zilla::Plugin::Test::CPAN::Changes: '0.008'
     Dist::Zilla::Plugin::Test::Compile::PerFile: '0.002002'
-    Dist::Zilla::Plugin::Test::Kwalitee: '2.08'
+    Dist::Zilla::Plugin::Test::Kwalitee: '2.11'
     Dist::Zilla::Plugin::Test::MinimumVersion: '2.000005'
     Dist::Zilla::Plugin::Test::Perl::Critic: '2.112410'
     Dist::Zilla::Plugin::Test::ReportPrereqs: '0.019'
@@ -98,8 +100,10 @@ x_BuiltWith:
     Dist::Zilla::Plugin::UploadToCPAN: '5.020'
     Dist::Zilla::PluginBundle::Author::KENTNL: '2.020000'
     Dist::Zilla::Tester: '5.020'
+    Dist::Zilla::Util: '5.020'
     ExtUtils::MakeMaker: '6.98'
     File::Spec: '3.49'
+    Module::Runtime: '0.014'
     Moose: '2.1211'
     Path::Tiny: '0.056'
     Pod::Coverage::TrustPod: '0.100003'
@@ -159,7 +163,7 @@ x_Dist_Zilla:
           inherit_version: '1'
           meta_noindex: '1'
       name: '@Author::KENTNL/MetaProvides::Package'
-      version: '2.000004'
+      version: '2.001000'
     -
       class: Dist::Zilla::Plugin::MetaData::BuiltWith
       config:
@@ -236,9 +240,10 @@ x_Dist_Zilla:
       class: Dist::Zilla::Plugin::Test::Kwalitee
       config:
         Dist::Zilla::Plugin::Test::Kwalitee:
+          filename: xt/release/kwalitee.t
           skiptest: []
       name: '@Author::KENTNL/Test::Kwalitee'
-      version: '2.08'
+      version: '2.11'
     -
       class: Dist::Zilla::Plugin::EOLTests
       name: '@Author::KENTNL/EOLTests'
