--- a/META.yml
+++ b/META.yml
@@ -54,7 +54,7 @@ x_BuiltWith:
     Carp: '1.34'
     Data::DPath: '0.50'
     Dist::Zilla::App::Command::bakeini: '0.001002'
-    Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes: '0.002003'
+    Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes: '0.003001'
     Dist::Zilla::Plugin::Authority: '1.006'
     Dist::Zilla::Plugin::AutoPrereqs: '5.020'
     Dist::Zilla::Plugin::BumpVersionAfterRelease: '0.002'
@@ -66,7 +66,7 @@ x_BuiltWith:
     Dist::Zilla::Plugin::Git::CommitBuild: '2.023'
     Dist::Zilla::Plugin::Git::Contributors: '0.007'
     Dist::Zilla::Plugin::Git::GatherDir: '2.023'
-    Dist::Zilla::Plugin::Git::NextRelease: '0.002012'
+    Dist::Zilla::Plugin::Git::NextRelease: '0.003000'
     Dist::Zilla::Plugin::Git::Tag: '2.023'
     Dist::Zilla::Plugin::GithubMeta: '0.46'
     Dist::Zilla::Plugin::License: '5.020'
@@ -76,7 +76,7 @@ x_BuiltWith:
     Dist::Zilla::Plugin::MetaConfig: '5.020'
     Dist::Zilla::Plugin::MetaData::BuiltWith: '1.002000'
     Dist::Zilla::Plugin::MetaJSON: '5.020'
-    Dist::Zilla::Plugin::MetaProvides::Package: '2.001000'
+    Dist::Zilla::Plugin::MetaProvides::Package: '2.001001'
     Dist::Zilla::Plugin::MetaTests: '5.020'
     Dist::Zilla::Plugin::MetaYAML: '5.020'
     Dist::Zilla::Plugin::MinimumPerl: '1.003'
@@ -163,7 +163,7 @@ x_Dist_Zilla:
           inherit_version: '1'
           meta_noindex: '1'
       name: '@Author::KENTNL/MetaProvides::Package'
-      version: '2.001000'
+      version: '2.001001'
     -
       class: Dist::Zilla::Plugin::MetaData::BuiltWith
       config:
@@ -406,7 +406,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes
       name: '@Author::KENTNL/Author::KENTNL::RecommendFixes'
-      version: '0.002003'
+      version: '0.003001'
     -
       class: Dist::Zilla::Plugin::ReadmeFromPod
       name: '@Author::KENTNL/ReadmeFromPod'
@@ -482,8 +482,10 @@ x_Dist_Zilla:
       version: '2.023'
     -
       class: Dist::Zilla::Plugin::Git::NextRelease
+      config:
+        Dist::Zilla::Plugin::Git::NextRelease: {}
       name: '@Author::KENTNL/Git::NextRelease'
-      version: '0.002012'
+      version: '0.003000'
     -
       class: Dist::Zilla::Plugin::BumpVersionAfterRelease
       name: '@Author::KENTNL/BumpVersionAfterRelease'
