--- a/dist.ini
+++ b/dist.ini
@@ -76,7 +76,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.020001
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.020003
 
 [MinimumPerl / @Author::KENTNL/MinimumPerl]
 
@@ -135,7 +135,7 @@ tag_format = %v
 [UploadToCPAN / @Author::KENTNL/UploadToCPAN]
 
 [Twitter / @Author::KENTNL/Twitter]
-hash_tags = #perl #cpan
+hash_tags = #perl #cpan #distzilla
 tweet_url = https://metacpan.org/release/{{$AUTHOR_UC}}/{{$DIST}}-{{$VERSION}}{{$TRIAL}}#whatsnew
 url_shortener = none
 
