--- a/META.yml
+++ b/META.yml
@@ -28,6 +28,7 @@ recommends:
 requires:
   Carp: '0'
   Data::DPath: '0'
+  Dist::Zilla::App::Tester: '0'
   Dist::Zilla::Tester: '0'
   Dist::Zilla::Util: '0'
   Module::Runtime: '0'
@@ -54,20 +55,21 @@ x_BuiltWith:
     Carp: '1.34'
     Data::DPath: '0.50'
     Dist::Zilla::App::Command::bakeini: '0.001002'
+    Dist::Zilla::App::Tester: '5.020'
     Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes: '0.003006'
     Dist::Zilla::Plugin::Authority: '1.006'
     Dist::Zilla::Plugin::AutoPrereqs: '5.020'
-    Dist::Zilla::Plugin::BumpVersionAfterRelease: '0.003'
+    Dist::Zilla::Plugin::BumpVersionAfterRelease: '0.004'
     Dist::Zilla::Plugin::ConfirmRelease: '5.020'
     Dist::Zilla::Plugin::CopyFilesFromBuild: '0.103510'
     Dist::Zilla::Plugin::EOLTests: '0.02'
-    Dist::Zilla::Plugin::Git::Check: '2.024'
-    Dist::Zilla::Plugin::Git::Commit: '2.024'
-    Dist::Zilla::Plugin::Git::CommitBuild: '2.024'
+    Dist::Zilla::Plugin::Git::Check: '2.025'
+    Dist::Zilla::Plugin::Git::Commit: '2.025'
+    Dist::Zilla::Plugin::Git::CommitBuild: '2.025'
     Dist::Zilla::Plugin::Git::Contributors: '0.007'
-    Dist::Zilla::Plugin::Git::GatherDir: '2.024'
-    Dist::Zilla::Plugin::Git::NextRelease: '0.003000'
-    Dist::Zilla::Plugin::Git::Tag: '2.024'
+    Dist::Zilla::Plugin::Git::GatherDir: '2.025'
+    Dist::Zilla::Plugin::Git::NextRelease: '0.004000'
+    Dist::Zilla::Plugin::Git::Tag: '2.025'
     Dist::Zilla::Plugin::GithubMeta: '0.46'
     Dist::Zilla::Plugin::License: '5.020'
     Dist::Zilla::Plugin::MakeMaker: '5.020'
@@ -96,9 +98,9 @@ x_BuiltWith:
     Dist::Zilla::Plugin::Test::Perl::Critic: '2.112410'
     Dist::Zilla::Plugin::Test::ReportPrereqs: '0.019'
     Dist::Zilla::Plugin::TestRelease: '5.020'
-    Dist::Zilla::Plugin::Twitter: '0.025'
+    Dist::Zilla::Plugin::Twitter: '0.026'
     Dist::Zilla::Plugin::UploadToCPAN: '5.020'
-    Dist::Zilla::PluginBundle::Author::KENTNL: '2.020003'
+    Dist::Zilla::PluginBundle::Author::KENTNL: '2.021000'
     Dist::Zilla::Tester: '5.020'
     Dist::Zilla::Util: '5.020'
     ExtUtils::MakeMaker: '6.98'
@@ -199,7 +201,7 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::KENTNL/Git::GatherDir'
-      version: '2.024'
+      version: '2.025'
     -
       class: Dist::Zilla::Plugin::License
       name: '@Author::KENTNL/License'
@@ -448,7 +450,7 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::KENTNL/Git::Check'
-      version: '2.024'
+      version: '2.025'
     -
       class: Dist::Zilla::Plugin::Git::Commit
       config:
@@ -465,7 +467,7 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::KENTNL/commit_dirty_files'
-      version: '2.024'
+      version: '2.025'
     -
       class: Dist::Zilla::Plugin::Git::Tag
       config:
@@ -479,15 +481,15 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::KENTNL/tag_master'
-      version: '2.024'
+      version: '2.025'
     -
       class: Dist::Zilla::Plugin::Git::NextRelease
       name: '@Author::KENTNL/Git::NextRelease'
-      version: '0.003000'
+      version: '0.004000'
     -
       class: Dist::Zilla::Plugin::BumpVersionAfterRelease
       name: '@Author::KENTNL/BumpVersionAfterRelease'
-      version: '0.003'
+      version: '0.004'
     -
       class: Dist::Zilla::Plugin::Git::Commit
       config:
@@ -505,7 +507,7 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::KENTNL/commit_release_changes'
-      version: '2.024'
+      version: '2.025'
     -
       class: Dist::Zilla::Plugin::Git::CommitBuild
       config:
@@ -519,7 +521,7 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::KENTNL/Git::CommitBuild'
-      version: '2.024'
+      version: '2.025'
     -
       class: Dist::Zilla::Plugin::Git::Tag
       config:
@@ -533,7 +535,7 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::KENTNL/tag_release'
-      version: '2.024'
+      version: '2.025'
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Author::KENTNL/UploadToCPAN'
@@ -541,7 +543,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Twitter
       name: '@Author::KENTNL/Twitter'
-      version: '0.025'
+      version: '0.026'
     -
       class: Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled
       config:
@@ -607,7 +609,7 @@ x_Dist_Zilla:
           modules_from_features: ~
           to_relationship: recommends
       name: Prereqs::Soften
-      version: '0.005000'
+      version: '0.005001'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
