--- a/META.yml
+++ b/META.yml
@@ -3,6 +3,7 @@ abstract: "KENTNL's DZil plugin testing tool"
 author:
   - 'Kent Fredric <kentnl@cpan.org>'
 build_requires:
+  Dist::Zilla::App::Command::authordeps: '0'
   ExtUtils::MakeMaker: '0'
   File::Spec: '0'
   Test::More: '0.89'
@@ -54,6 +55,7 @@ x_BuiltWith:
     CPAN::Meta: '2.142690'
     Carp: '1.34'
     Data::DPath: '0.50'
+    Dist::Zilla::App::Command::authordeps: '5.020'
     Dist::Zilla::App::Command::bakeini: '0.001002'
     Dist::Zilla::App::Tester: '5.020'
     Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes: '0.003006'
