--- a/META.yml
+++ b/META.yml
@@ -19,10 +19,10 @@ name: Dist-Zilla-Util-Test-KENTNL
 provides:
   Dist::Zilla::Util::Test::KENTNL:
     file: lib/Dist/Zilla/Util/Test/KENTNL.pm
-    version: '1.004000'
+    version: '1.003004'
   Dist::Zilla::Util::Test::KENTNL::dztest:
     file: lib/Dist/Zilla/Util/Test/KENTNL/dztest.pm
-    version: '1.004000'
+    version: '1.003004'
 recommends:
   Test::Differences: '0'
   Test::More: '1.001006'
@@ -49,12 +49,13 @@ resources:
   bugtracker: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL/issues
   homepage: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL
   repository: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL.git
-version: '1.004000'
+version: '1.003004'
 x_BuiltWith:
   modules:
     CPAN::Meta: '2.142690'
     Carp: '1.34'
     Data::DPath: '0.50'
+    Dist::Zilla: '5.020'
     Dist::Zilla::App::Command::authordeps: '5.020'
     Dist::Zilla::App::Command::bakeini: '0.001002'
     Dist::Zilla::App::Tester: '5.020'
@@ -88,7 +89,9 @@ x_BuiltWith:
     Dist::Zilla::Plugin::PodSyntaxTests: '5.020'
     Dist::Zilla::Plugin::PodWeaver: '4.006'
     Dist::Zilla::Plugin::Prereqs: '5.020'
+    Dist::Zilla::Plugin::Prereqs::AuthorDeps: '0.003'
     Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled: '0.003001'
+    Dist::Zilla::Plugin::Prereqs::Soften: '0.005001'
     Dist::Zilla::Plugin::ReadmeAnyFromPod: '0.142470'
     Dist::Zilla::Plugin::ReadmeFromPod: '0.21'
     Dist::Zilla::Plugin::RewriteVersion::Sanitized: '0.001004'
@@ -393,6 +396,10 @@ x_Dist_Zilla:
       name: '@Author::KENTNL/BundleDevelSuggests'
       version: '5.020'
     -
+      class: Dist::Zilla::Plugin::Prereqs::AuthorDeps
+      name: '@Author::KENTNL/Prereqs::AuthorDeps'
+      version: '0.003'
+    -
       class: Dist::Zilla::Plugin::MinimumPerl
       name: '@Author::KENTNL/MinimumPerl'
       version: '1.003'
@@ -476,7 +483,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: ~
           signed: '0'
-          tag: 1.004000-source
+          tag: 1.003004-source
           tag_format: '%v-source'
           tag_message: v%v
           time_zone: local
@@ -530,7 +537,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: releases
           signed: '0'
-          tag: '1.004000'
+          tag: '1.003004'
           tag_format: '%v'
           tag_message: v%v
           time_zone: local
